# XXRFID

./: CMakeLists.txt  COM.cpp  COM.h  MessageProc.cpp  RFIDProtocol.cpp  RFIDProtocol.h  ReaderProtocol.cpp  ReaderProtocol.h  Server.cpp  Server.h  USB.cpp  USB.h  XXRFID.cpp  XXRFID.h  a.out  client.cpp  client.h  delegate.h  hid.c  list.cpp  list.h  main.c  message.h  protocol.h  pub.cpp  pub.h  result.cpp  result.h  select.cpp  select.h  socket.cpp  socket.h
